--- a/projects/templates/projects/project_list.html
+++ b/projects/templates/projects/project_list.html
@@ -59,5 +59,5 @@
 </div>
 
 {# Incluye el JS de previews (estático) #}
-<script src="{% static 'js/project-previews.js' %}" defer></script>
+<script src="{% static 'js/previews/project-previews.js' %}" defer></script>
 {% endblock %}
