--- a/services/templates/services/payment_success.html
+++ b/services/templates/services/payment_success.html
@@ -138,5 +138,5 @@
 {% endblock content %}
 
 {% block extra_scripts %}
-<script src="{% static 'js/copy-to-clipboard.js' %}"></script>
+<script src="{% static 'js/core/copy-to-clipboard.js' %}"></script>
 {% endblock extra_scripts %}
