--- a/services/templates/services/service_list.html
+++ b/services/templates/services/service_list.html
@@ -71,5 +71,5 @@
 
 {% block extra_scripts %}
   <!-- Lazy video (mismo script que en projects) -->
-  <script src="{% static 'js/project-previews.js' %}" defer></script>
+  <script src="{% static 'js/previews/project-previews.js' %}" defer></script>
 {% endblock %}
