--- a/users/templates/accounts/password_change_done.html
+++ b/users/templates/accounts/password_change_done.html
@@ -46,5 +46,5 @@
 {% endblock %}
 
 {% block extra_scripts %}
-  <script src="{% static 'js/password-change-done.js' %}" defer></script>
+  <script src="{% static 'js/users/password-change-done.js' %}" defer></script>
 {% endblock %}
