--- a/users/templates/accounts/password_change_form.html
+++ b/users/templates/accounts/password_change_form.html
@@ -33,7 +33,7 @@
             {{ form.new_password2.errors }}
           </div>
 
-          <button class="btn btn-primary w-100" type="submit">Actualizar contraseña</button>
+          <button class="cta-button cta-section px-4 py-2 w-100" type="submit">Actualizar contraseña</button>
         </form>
 
         <div class="mt-3">
