--- a/users/templates/accounts/password_reset_confirm.html
+++ b/users/templates/accounts/password_reset_confirm.html
@@ -25,7 +25,7 @@
       <div class="alert alert-warning">
         El enlace de restablecimiento no es válido o ha caducado.
       </div>
-      <a class="btn btn-outline-primary" href="{% url 'users:password_reset' %}">Solicitar otro enlace</a>
+      <a class="btn btn-outline-cta rounded-pill px-4 py-2" href="{% url 'users:password_reset' %}">Solicitar otro enlace</a>
     {% endif %}
   </div>
 </div>
