--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -379,13 +379,13 @@
     <!-- Scripts -->
     <script src="https://sdk.minepi.com/pi-sdk.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script src="{% static 'js/animation.js' %}" defer></script>
-    <script src="{% static 'js/counters.js' %}" defer></script>
-    <script src="{% static 'js/cookiesConsent.portfolio.js' %}" defer></script>
-    <script src="{% static 'js/pageLoader.js' %}" defer></script>
-    <script src="{% static 'js/alerts.anim.js' %}" defer></script>
-    <script src="{% static 'js/theme.js' %}" defer></script>
-    <script src="{% static 'js/pi-init.js' %}" defer></script>
+    <script src="{% static 'js/animations/animation.js' %}" defer></script>
+    <script src="{% static 'js/core/counters.js' %}" defer></script>
+    <script src="{% static 'js/core/cookiesConsent.portfolio.js' %}" defer></script>
+    <script src="{% static 'js/core/pageLoader.js' %}" defer></script>
+    <script src="{% static 'js/animations/alerts.anim.js' %}" defer></script>
+    <script src="{% static 'js/core/theme.js' %}" defer></script>
+    <script src="{% static 'js/pi_payments/pi-init.js' %}" defer></script>
 
     {% block extra_scripts %}{% endblock %}
 
