--- a/core/templates/errors/locked_out.html
+++ b/core/templates/errors/locked_out.html
@@ -32,10 +32,10 @@
         {% endif %}
 
         <div class="d-flex gap-2">
-          <a class="btn btn-primary" href="{% url 'users:login' %}">
+          <a class="cta-button cta-section" href="{% url 'users:login' %}">
             <i class="fa-solid fa-right-to-bracket me-1"></i> Volver a iniciar sesión
           </a>
-          <a class="btn btn-outline-secondary" href="/">
+          <a class="btn btn-outline-cta rounded-pill px-4 py-2" href="/">
             <i class="fa-solid fa-house me-1"></i> Ir al inicio
           </a>
         </div>
