--- a/users/templates/accounts/password_reset_complete.html
+++ b/users/templates/accounts/password_reset_complete.html
@@ -5,7 +5,7 @@
   <div class="col-12 col-md-6 col-lg-5">
     <h1 class="h4 mb-3">¡Listo!</h1>
     <p class="text-muted">Tu contraseña se cambió correctamente.</p>
-    <a class="btn btn-primary" href="{% url 'users:login' %}">Inicia sesión</a>
+    <a class="cta-button cta-section px-4 py-2 w-100" href="{% url 'users:login' %}">Inicia sesión</a>
   </div>
 </div>
 {% endblock %}
