--- a/users/templates/accounts/password_reset_form.html
+++ b/users/templates/accounts/password_reset_form.html
@@ -14,7 +14,7 @@
         {{ form.email }}
         {{ form.email.errors }}
       </div>
-      <button class="btn btn-primary w-100" type="submit">Enviar enlace</button>
+      <button class="cta-button cta-section px-4 py-2 w-100" type="submit">Enviar enlace</button>
     </form>
 
     <div class="mt-3 small">
